# useful-shell-scripts

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  ci.sh  config.example.yaml  config.example.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
bash/: bashrc-dev.sh  bashrc-extra.sh  bashrc-files.sh  bashrc-processes.sh  git-copy-bare.sh  git-lite-mirror.sh  git2linksremote.sh  git2markdown.sh  ports-in-use.sh  psfind.sh  update-system.example.yml  update-system.sh
python/: __init__.py  yaml_parser.py
tests/: __init__.py  test_bashrc_dev.py  test_bashrc_extra.py  test_bashrc_files.py  test_bashrc_processes.py  test_git2linksremote.py  test_git2markdown.py  test_git_copy_bare.py  test_ports_in_use.py  test_psfind.py  test_setup.py  test_shellcheck.py  test_update_system.py  test_utils.py  test_version.py  test_yaml_parser.py
tests/to-exclude/: test.md
useful_shell_scripts/: __init__.py
